[gd_scene load_steps=10 format=3 uid="uid://dg83w8o65sv6b"]

[ext_resource type="Texture2D" uid="uid://fdc5bgm8c7ef" path="res://assets/art/player_skins/player1.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://ckrbsdbqv1xqq" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://cx5j8vdrs5q7b" path="res://scenes/bullet.tscn" id="2_i3pqv"]
[ext_resource type="Shader" uid="uid://dsxrjdm0o20m5" path="res://assets/shaders/player.gdshader" id="3_hqtel"]
[ext_resource type="AudioStream" uid="uid://bpjuat2okh0dq" path="res://assets/sounds/effects/laser.wav" id="5_qlg0r"]
[ext_resource type="AudioStream" uid="uid://efmaviggisp1" path="res://assets/sounds/effects/death.wav" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://dwgxk20g2utbw" path="res://assets/sounds/effects/damage.wav" id="7_fjrip"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sweqy"]
shader = ExtResource("3_hqtel")
shader_parameter/opacity = 1.0
shader_parameter/r = 1.0
shader_parameter/g = 1.0
shader_parameter/b = 1.0
shader_parameter/mix_color = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 40.0125

[node name="Player" type="Area2D"]
collision_mask = 4
script = ExtResource("1_onrkg")
bullet_scene = ExtResource("2_i3pqv")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sweqy")
scale = Vector2(2, 2)
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_4flbx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 4.17233e-07)
scale = Vector2(0.8, 0.8)

[node name="TakeDamageShaderTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TakeDamageTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qlg0r")

[node name="DeathStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tuyoq")

[node name="DamageAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fjrip")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TakeDamageShaderTimer" to="." method="_on_take_damage_shader_timer_timeout"]
[connection signal="timeout" from="TakeDamageTimer" to="." method="_on_take_damage_timer_timeout"]
